# MLPermutationSolver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  solve_puzzle.py
experiments/: README.md  README_exp.md  benchmark_random_walks.py  optimize_random_walks.py  profile_model.py  profile_solver.py  run_pipeline.py  run_rw_nbt_depth_experiment_.py  tune_rw_nbt_depth.py  validate_lrx_solutions.py  validate_solutions.py
src/: __init__.py  puzzles.py  utils.py
src/data_gen/: __init__.py  bfs_distances.py  random_walks.py
src/models/: __init__.py  base_model.py  catboost_model.py  greedy_gap_model.py  mlp_model.py  xgboost_model.py
src/solvers/: __init__.py  base_solver.py  beam_solver.py  factory.py  hash_history.py  pancake_exact_solver.py  puzzle_adapters.py  simple_solver.py
