[tool.poetry]
name = "mlpermutationsolver"
version = "0.1.0"
description = ""
authors = ["T0chka <an.dolgorukova@gmail.com>"]
readme = "README.md"
packages = [{include = "mlpermutationsolver"}]

[tool.poetry.dependencies]
python = ">=3.11"
pandas = ">=2.2.3,<3.0.0"
torch = ">=2.6.0,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
xgboost = ">=2.1.4,<3.0.0"
catboost = ">=1.2.7,<2.0.0"
lightgbm = ">=4.5.0,<5.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"